[gd_scene load_steps=2 format=3 uid="uid://c1hsxmvxrxx66"]

[ext_resource type="Script" uid="uid://nh8cf6cs87in" path="res://scripts/Interface/main_menu_interface.gd" id="1_kk50k"]

[node name="Main Menu Interface" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kk50k")

[node name="Timer" type="Timer" parent="."]
wait_time = 2.5
one_shot = true
autostart = true

[node name="Fade" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Main" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_right = 203.0
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Main"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -113.5
offset_right = 203.0
offset_bottom = 113.5
grow_vertical = 2
theme_override_constants/separation = 19

[node name="Play" type="Button" parent="Main/VBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 40
text = "Play"
flat = true
alignment = 0

[node name="Options" type="Button" parent="Main/VBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 40
text = "Options
"
flat = true
alignment = 0

[node name="Exit Game" type="Button" parent="Main/VBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 40
text = "Exit Game
"
flat = true
alignment = 0

[node name="Options" type="Control" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -20.0
offset_right = 40.0
offset_bottom = 20.0
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Options"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -154.5
offset_right = 178.0
offset_bottom = 154.5
grow_vertical = 2
theme_override_constants/separation = 19

[node name="Graphics" type="Button" parent="Options/VBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 40
text = "Graphics
"
flat = true
alignment = 0
language = "es_ES"

[node name="Audio" type="Button" parent="Options/VBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 40
text = "Audio
"
flat = true
alignment = 0

[node name="Controls" type="Button" parent="Options/VBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 40
text = "Controls
"
flat = true
alignment = 0

[node name="Back" type="Button" parent="Options/VBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 40
text = "Back
"
flat = true
alignment = 0

[node name="Audio" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Graphics" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="Main/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Main/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Main/VBoxContainer/Exit Game" to="." method="_on_exit_game_pressed"]
[connection signal="pressed" from="Options/VBoxContainer/Back" to="." method="_on_back_pressed"]
